--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-spring.application.name=GERENCIAMENTO_INVENTARIO
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.url=jdbc:mysql://localhost:3306/inventario?createDatabaseIfNotExist=true&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-server.port=8085
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=${POSTGRES_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
